[package]
name = "nomad-client"
version = "0.0.6"
description = "A Rust client for HashiCorp Nomad's API."
homepage = "https://github.com/rivet-gg/Nomad.OAS/tree/master/clients/rust"
repository = "https://github.com/rivet-gg/Nomad.OAS"
keywords = [
    "nomad",
    "hashicorp",
    "api",
    "client",
    "openapi",
]
categories = [
    "api-bindings",
]
authors = [
    "FuturistiCoder <FuturistiCoder@gmail.com>",
    "Nathan Flurry <developer@nathanflurry.com>",
]
license = "MIT"
edition = "2018"
readme = "README.md"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
